--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Insights into Wetlands</h1>
             <hr>
-            <p> Water ties into many avenues ...</p>
+            <p> Welcome to WetlandsEO, where wetlands meets advanced technology, insights drive resilience, and communities thrive.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>        
