--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,39 +2,40 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Services</h2>
                 <hr class="primary">
             </div>
         </div>
     </div>
+    We navigate the intersection of climate risk and sustainable solutions, delivering a future where the power of nature and informed decisions unite. Join us on this journey toward resilient communities, powered by the synergy of wetland ecosystems and actionable insights.
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>AI driven</h3>
+                    <p class="text-muted">Our work is built on cudding-edge AI.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>Analysis Ready</h3>
+                    <p class="text-muted">You can use our interpretive layers</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>Constantly Evolving</h3>
+                    <p class="text-muted">We innovate tirelessly.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Diverse Team</h3>
+                    <p class="text-muted">We are team who delivers.</p>
                 </div>
             </div>
         </div>
