--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                <p class="text-faded"> We navigate the intersection of climate risk and sustainable solutions, delivering a future where the power of nature and informed decisions unite. Join us on this journey toward resilient communities, powered by the synergy of wetland ecosystems and actionable insights.</p>
                 <a href="#" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
