--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                     <h3>AI driven</h3>
-                    <p class="text-muted">Our work is built on cudding-edge AI.</p>
+                    <p class="text-muted">Our work is built on cutting-edge AI.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -34,7 +34,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Diverse Team</h3>
-                    <p class="text-muted">We are team who delivers.</p>
+                    <p class="text-muted">We are team that delivers.</p>
                 </div>
             </div>
         </div>
