--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,11 +1,19 @@
 <section class="bg-primary" id="about">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">About</h2>
+                <hr class="primary">
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <!--<h2 class="section-heading">We've got what you need!</h2> -->
                 <hr class="light">
-                <p class="text-faded"> We navigate the intersection of climate risk and sustainable solutions, delivering a future where the power of nature and informed decisions unite. Join us on this journey toward resilient communities, powered by the synergy of wetland ecosystems and actionable insights.</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">Our team is working to bring the power of remote sensing to accurately map wetlands, and deliver data-driven insights that supports diverse users in management, conservation and restoration. We hope that you’ll join us in creating a product that accounts for the services that intact wetlands provide to everyone. </p>
+                <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>m-->
             </div>
         </div>
     </div>
