--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,10 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Blogs</a>
+                    <a class="page-scroll" href="#services">News</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">App</a>
+                    <a class="page-scroll" href="#portfolio">Partnets</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
