--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,41 +2,45 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Services</h2>
+                <h2 class="section-heading">News</h2>
                 <hr class="primary">
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>AI driven</h3>
-                    <p class="text-muted">Our work is built on cutting-edge AI.</p>
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <h3>March 1, 2024</h3>
+                    <p class="text-muted"><a target="_blank" href="https://environment.uw.edu/news/2024/03/cryptic-carbon-uw-study-finds-hidden-wetlands-in-the-forest/">Cryptic carbon: UW study finds hidden wetlands in the forest</a></p>
                 </div>
             </div>
+
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Analysis Ready</h3>
-                    <p class="text-muted">You can use our interpretive layers</p>
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <h3>February 15, 2024</h3>
+                    <p class="text-muted"><a target="_blank" href="https://new.nsf.gov/news/nsf-invests-9-8m-advance-equitable-water-solutions">NSF invests $9.8M to advance equitable water solutions</a></p>
                 </div>
             </div>
+
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Constantly Evolving</h3>
-                    <p class="text-muted">We innovate tirelessly.</p>
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <h3>December 5, 2023</h3>
+                    <p class="text-muted"><a target="_blank" href="https://stateline.org/2023/12/05/after-clean-water-act-ruling-states-that-want-to-protect-affected-wetlands-need-millions/">After Clean Water Act ruling, states that want to protect affected wetlands need millions</a></p>
                 </div>
             </div>
+
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Diverse Team</h3>
-                    <p class="text-muted">We are team that delivers.</p>
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <h3>August 18, 2023</h3>
+                    <p class="text-muted"><a target="_blank" href="https://www.resources.org/common-resources/the-future-of-the-waters-of-the-united-states-after-sackett-v-us-environmental-protection-agency/">The Future of the Waters of the United States after Sackett v. US Environmental Protection Agency</a></p>
                 </div>
             </div>
-        </div>
+
+        </div>    
     </div>
 </section>
