--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a class="page-scroll" href="#services">News</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Partnets</a>
+                    <a class="page-scroll" href="#portfolio">Partners</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
