--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,20 +1,25 @@
 <section class="bg-primary" id="about">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">About</h2>
-                <hr class="primary">
-            </div>
-        </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">About</h2>
+      </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <!--<h2 class="section-heading">We've got what you need!</h2> -->
-                <hr class="light">
-                <p class="text-faded">Our team is working to bring the power of remote sensing to accurately map wetlands, and deliver data-driven insights that supports diverse users in management, conservation and restoration. We hope that you’ll join us in creating a product that accounts for the services that intact wetlands provide to everyone. </p>
-                <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>m-->
-            </div>
-        </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <!--<h2 class="section-heading">We've got what you need!</h2> -->
+        <hr class="light" />
+        <p class="text-faded">
+          Our team is working to bring the power of remote sensing to accurately
+          map wetlands, and deliver data-driven insights that supports diverse
+          users in management, conservation and restoration. We hope that you’ll
+          join us in creating a product that accounts for the services that
+          intact wetlands provide to everyone.
+        </p>
+        <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>m-->
+      </div>
     </div>
+  </div>
 </section>
