added team member names and NSF to partners

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -9,7 +9,7 @@
   </div>
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <a href="#" class="portfolio-box">
           <img
             src="img/team/placeholder-headshot.png"
@@ -17,10 +17,10 @@
             alt="Team Member 1"
           />
         </a>
-        <h3>Name 1</h3>
+        <h3>Aji John</h3>
         <p>Title 1</p>
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <a href="#" class="portfolio-box">
           <img
             src="img/team/placeholder-headshot.png"
@@ -28,10 +28,10 @@
             alt="Team Member 2"
           />
         </a>
-        <h3>Name 2</h3>
+        <h3>Lauren Kuehne</h3>
         <p>Title 2</p>
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <a href="#" class="portfolio-box">
           <img
             src="img/team/placeholder-headshot.png"
@@ -39,7 +39,150 @@
             alt="Team Member 3"
           />
         </a>
-        <h3>Name 3</h3>
+        <h3>Jesse</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Jill Silver</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Mauren R</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Max Lambert</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Monica</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Stacy Lischka</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Dan Miller</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Meghan Halabisky</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Maureen D</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Kai Jeffreys</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Lindsey</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Cara Huynh</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Sushma Shankar</h3>
+        <p>Title 3</p>
+      </div>
+      <div class="col-lg-3 text-center">
+        <a href="#" class="portfolio-box">
+          <img
+            src="img/team/placeholder-headshot.png"
+            class="img-responsive mx-auto d-block"
+            alt="Team Member 3"
+          />
+        </a>
+        <h3>Megan Ly</h3>
         <p>Title 3</p>
       </div>
     </div>
