--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -7,14 +7,19 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="row no-gutter">
-      <div class="col-lg-12">
+  <div id="" class="container-fluid">
+      <div class="col-lg-2">
         <a href="https://www.nature.org/en-us/" class="portfolio-box">
           <img
             src="img/partners/the-nature-conservancy-logo.png"
-            class="img-responsive"
             alt=""
+            class="img-responsive"
+          />
+        </a>
+      </div>
+      <div class="col-lg-2">
+        <a href="https://www.nsf.gov/" class="portfolio-box">
+          <img src="img/partners/nsf_logo.jpg" alt="" class="img-responsive"
           />
         </a>
       </div>
